[gd_scene load_steps=6 format=3 uid="uid://db1xlddqcancd"]

[ext_resource type="Script" path="res://scenes/start_screen/scenes/select-menu.gd" id="1_dfhbg"]
[ext_resource type="PackedScene" uid="uid://cgj1phq508y8v" path="res://assets/Blends/Cop.blend" id="2_os8gy"]
[ext_resource type="PackedScene" uid="uid://d3mssbsqb8jue" path="res://assets/Blends/SportsCar2.blend" id="3_ifcpd"]
[ext_resource type="PackedScene" uid="uid://cvjruclfub0db" path="res://assets/Blends/SUV.blend" id="4_as78y"]
[ext_resource type="PackedScene" uid="uid://bj7dpqbspx5fk" path="res://assets/Blends/Taxi.blend" id="5_lq7xd"]

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 4
script = ExtResource("1_dfhbg")

[node name="Select" type="Button" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 532.0
offset_top = 576.0
offset_right = 586.0
offset_bottom = 576.0
grow_horizontal = 2
grow_vertical = 2
text = "Select"

[node name="Prev" type="Button" parent="."]
layout_mode = 2
offset_left = 16.0
offset_top = 280.0
offset_right = 212.0
offset_bottom = 311.0
text = "Previous"

[node name="Next" type="Button" parent="."]
layout_mode = 2
offset_left = 944.0
offset_top = 280.0
offset_right = 1140.0
offset_bottom = 311.0
text = "Next
"

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 40.0
offset_right = 69.0
offset_bottom = 71.0
text = "Back"

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.999649, 0.0132066, 0.0229632, -0.0182925, 0.971142, 0.237799, -0.01916, -0.238136, 0.971043, -0.0518546, 1.51755, 3.49092)

[node name="Node3D" type="Node3D" parent="."]

[node name="Cop2" parent="Node3D" instance=ExtResource("2_os8gy")]

[node name="SportsCar22" parent="Node3D" instance=ExtResource("3_ifcpd")]

[node name="SUV2" parent="Node3D" instance=ExtResource("4_as78y")]

[node name="Taxi2" parent="Node3D" instance=ExtResource("5_lq7xd")]

[connection signal="pressed" from="Prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
